# GCoder

./: CMakeLists.txt  GCoderParameters.yaml  README.md  demosettings.ini
include/: chartview.h  gcode.h
src/: chartview.cpp  gcode.cpp  gcoder_widget.cpp  gcoder_widget.h  gcoder_widget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
